Option to refresh bike list. And getting additional bike details
